--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <link rel="stylesheet" href="finalstyle.css">
 </head>
 <body>
-  <div class="proj"><a href="./qr-code-component-main/index.htmll">1. QR code component</a></div>
+  <div class="proj"><a href="qr-code-component-main/index.html">1. QR code component</a></div>
 </body>
 </html>
